added broken arrow renderer some of the worst code ive ever seen